module(
    name = "csoft",
    version = "0.1.0",
)

bazel_dep(name = "rules_jvm_external", version = "6.2")
bazel_dep(name = "rules_python", version = "0.40.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "io.vertx:vertx-core:4.5.1",
        "io.vertx:vertx-web:4.5.1",
        "junit:junit:4.13.2",
        # Include MacOS native DNS resolver to avoid runtime warnings on Mac
        "io.netty:netty-resolver-dns-native-macos:jar:osx-aarch_64:4.1.103.Final",
    ],
    repositories = [
        "https://repo.maven.apache.org/maven2",
    ],
)
use_repo(maven, "maven")

python_ext = use_extension("@rules_python//python/extensions:python.bzl", "python")
python_ext.toolchain(
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.11",
)
use_repo(python_ext, "python_3_11")
